# cx-shell

./: .gitignore  CHANGELOG.md  README.md  cx.spec  pyproject.toml
.github/workflows/: release.yml
src/cx_shell/: cli.py  feedback_logger.py  history_logger.py  main.py  utils.py
src/cx_shell/agent/: analyst_agent.py  base_agent.py  llm_client.py  planner_agent.py  tool_specialist_agent.py
src/cx_shell/assets/configs/: agents.default.yaml
src/cx_shell/assets/system-lib/compilers/: blueprint_generator.py  google_discovery_adapter.py  openapi_adapter.py  openapi_compiler.py  spec_compiler.py
src/cx_shell/assets/system-tasks/: compile.connector.yaml
src/cx_shell/data/: agent_schemas.py
src/cx_shell/engine/connector/: config.py  engine.py  service.py  utils.py
src/cx_shell/engine/connector/providers/: base.py
src/cx_shell/engine/connector/providers/fs/: declarative_fs_strategy.py
src/cx_shell/engine/transformer/: service.py
src/cx_shell/engine/transformer/engines/: jinja_engine.py  pandas_engine.py
src/cx_shell/interactive/: agent_orchestrator.py  commands.py  completer.py  context_engine.py  executor.py  main.py  output_handler.py  session.py
src/cx_shell/interactive/grammar/: cx-01.lark  cx.lark
src/cx_shell/management/: app_manager.py  belief_manager.py  connection_manager.py  find_manager.py  flow_manager.py  index_manager.py  open_manager.py  process_manager.py  query_manager.py  registry_manager.py  script_manager.py  session_manager.py  upgrade_manager.py  workspace_manager.py
src/cx_shell/server/: main.py
tests/: conftest.py  test_cli_e2e.py  test_interactive_executor.py
tests/e2e/: test_agent_workflows.py
tests/engine/: test_script_engine.py
tests/engine/connector/: test_resolver.py
tests/interactive/: test_executor.py
tests/management/: test_upgrade_manager.py
(+20 files in other folders)
